--- a/ClienteAPI/appsettings.json
+++ b/ClienteAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ClienteConnection": "server=localhost;database=cliente;user=root;password=root123"
+    "ClienteConnection": "server=db;database=cliente;user=root;password=root"
   }
 }
