--- a/ClienteAPI/compose.yaml
+++ b/ClienteAPI/compose.yaml
@@ -1,4 +1,22 @@
-services:
+services:  
+  db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=cliente
+    ports:
+      - "3307:3306"
+    volumes:
+      - db-data:/var/lib/mysql
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-proot"]
+      interval: 10s
+      retries: 5
+      start_period: 60s
+      timeout: 10s
   server:
     build:
       context: .
@@ -7,31 +25,12 @@ services:
       - 5106:8080
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ConnectionStrings__DefaultConnection=Server=db;Database=cliente;User=root;Password=root;
+      - ConnectionStrings__DefaultConnection=Server=db;Port=3307;Database=cliente;User=root;Password=root;
     depends_on:
       db:
         condition: service_healthy
     networks:
       - app-network
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: cliente
-    ports:
-      - "3306:3306"
-    volumes:
-      - db-data:/var/lib/mysql
-    networks:
-      - app-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$MYSQL_ROOT_PASSWORD"]
-      interval: 10s
-      retries: 5
-      start_period: 30s
-      timeout: 10s
-
 networks:
   app-network:
     driver: bridge
